# physics-sim

./: .gitignore  pyproject.toml
.github/workflows/: analysis.yml  build.yml  ci.yml  unit-tests.yml
src/: JES.py  body.py  collisions.py  container.py  drawlib.py  enums.py  mathlib.py  matrix.py  settings.py  testlib.py  world.py
src/eyecandy/: __init__.py  __main__.py  test_collisions.py  test_detectcollisions.py  test_spinsquares.py  utils.py
src/tests/: __init__.py  __main__.py  spinning_squares.py  test_spinsquares.py  test_vector.py  utils.py
